--- a/index.html
+++ b/index.html
@@ -1,33 +1,223 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>mixania's page</title>
+<head>
+  <title>Michael Braverman</title>
+  <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link href='https://fonts.googleapis.com/css?family=Arvo:700' rel='stylesheet' type='text/css'>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <!-- <body> -->
-    <h1 class="title" data-text="whats gucci?">whats gucci?</h1>
-    <main>
-        <a class="project-link" href="portfolio/index.html"><h2><span>X</span>portfolio site</h2></a>
-        <a class="project-link" href="projects/01/index.html"><h2><span>01</span>squarework</h2></a>
-        <a class="project-link" href="projects/02/index.html"><h2><span>02</span>oulipo</h2></a>
-        <a class="project-link" href="projects/03/index.html"><h2><span>03</span>bubbles</h2></a>
-        <a class="project-link" href="projects/04/index.html"><h2><span>04</span>flesch</h2></a>
-        <a class="project-link" href="projects/05/index.html"><h2><span>05</span>in.fORM regex-alpha</h2></a>
-        <a class="project-link" href="https://github.com/mixania/infORM"><h2><span>06
-        </span>infORM alpha (WIP)</h2></a>
-        <a class="project-link" href="projects/07/index.html"><h2><span>07</span>word wave</h2></a>
-        <a class="project-link" href="projects/08/index.html"><h2><span>08</span>happy-api</h2></a>
-        <a class="project-link" href="projects/09/index.html"><h2><span>09</span>classified rita</h2></a>
-        <a class="project-link" href="projects/10/index.html"><h2><span>10</span>teach me</h2></a>
-        <a class="project-link" href="http://mbrav.com/"><h2><span>11</span>Technelogical Feudalism</h2></a>
-    </main>
-  </body>
+  <!-- Description  -->
+  <meta name="title" content="Michael Braverman" />
+  <meta name="description" content="Michael Braverman's digital identity website" />
+  <meta name="keywords" content="design, art, technology, portfolio" />
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+
+  <!-- Open Graph Protocol -->
+	<meta property="og:title" content="Michael Braverman"/>
+	<meta property="og:image" content="/content/land.jpg"/>
+	<meta property="og:site_name" content="mbrav.com"/>
+	<meta property="og:description" content="design, art, technology, portfolio"/>
+
+  <!-- Fonts  -->
+  <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+
+  <link rel="icon" sizes="16x16 32x32" href="favicon.ico">
+  <link href='src/style.css' rel='stylesheet' type='text/css'>
+
+</head>
+<body>
+  <!--
+  CODE ATTRIBUTIONS:
+
+  Bryan Ma
+  http://www.bryan-ma.com/
+
+  -->
+  <!-- NAVIGATION BAR-->
+  <nav>
+    <div id="title">
+      <h1>Michael</h1>
+      <h1>Braverman</h1>
+    </div>
+    <div id="nav-toggle-button">
+      MENU
+    </div>
+    <ul>
+      <li id="about-link"><a href="#about">About</a></li>
+      <li id="projects-link"><a href="#projects">Projects</a></li>
+      <li id="resume-link"><a href="#resume">Résumé</a></li>
+      <li id="contact-link"><a href="#contact">Contact</a></li>
+      <li id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
+    </ul>
+  </nav>
+
+  <!-- ABOUT PAGE  -->
+  <main id="about">
+    <div class="crop-img">
+      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+    </div>
+    <div class="content">
+      <div class="content">
+        <div class="img-caption">
+          Artificial Intellect Box (2015)
+        </div>
+        <p>Hi, I’m Michael. </p>
+
+        <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique applications of technology in design. The terms that might define this unorthodox focus in studies is <em>creative technology</em>, <em>creative coding</em>, and <em>solution design</em>. </p>
+
+        <p>In parallel with Parsons, I am perusing a secondary major at Eugene Lang in Philosophy and Media. My focus in this area of studies emphasizes on technology as an existential extension of the modern human being. My goal is to take these explorations and apply them with technology with an emphasis on moral awarness, and underlying motives. </p>
+
+        <p>May, 2016 </p>
+      </div>
+    </div>
+  </main>
+
+  <!-- PROJECTS PAGE  -->
+  <main id="projects">
+    <div class="crop-img">
+      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+    </div>
+    <div class="content">
+      <div class="img-caption">
+        Artificial Intellect Box (2015)
+      </div>
+      <h1>Projects</h1>
+      <h4>Portfolio Website <b>(2016)</b></h4>
+      <h4><a href="code/index.html">Javascript Experiments</a> <b>(January - May 2016)</b></h4>
+      <h4>Infrastructural Utopia Tower<b>(2016)</b></h4>
+      <h4>Téchnelogical Feudalism<b>(2016)</b></h4>
+      <h4>Multiverse Clockwork<b>(2016)</b></h4>
+      <h4>They Know What is What<b>(2016)</b></h4>
+      <h4>in.fORM alpha <b>(2016)</b></h4>
+      <h4>Endeavour's Guide for the 21st Century<b>(2016)</b></h4>
+      <h4>Flowing Pagoda<b>(2015)</b></h4>
+      <h4>Emotion Cube<b>(2015)</b></h4>
+      <h4>Space Sound Splosion<b>(2015)</b></h4>
+      <h4>Artificial Intellect Box<b>(2015)</b></h4>
+      <h4>Thermo Star<b>(2014)</b></h4>
+      <h4>Feeduino<b>(2012)</b></h4>
+      <h1>Manifestos</h1>
+      <h4>An Artist is A Neural Psynapse</h4>
+    </div>
+  </main>
+
+  <!-- RESUME PAGE  -->
+  <main id="resume">
+    <div class="crop-img">
+      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+    </div>
+
+    <div class="content">
+      <div class="img-caption">
+        Artificial Intellect Box (2015)
+      </div>
+      <h1>Résumé</h1>
+      <h3>Creative Technology, Physical Computing, and Web Interaction Design</h3>
+
+      <h2>Education</h2>
+      <p>
+        <strong>Parsons School of Design</strong> New York, NY
+        <br>
+        BFA in <u>Design and Technology</u>
+        <br>
+        class of May 2018
+      </p>
+      <p>
+        <strong>New School Eugene Lang</strong> New York, NY
+        <br>
+        BFA in <u>Philospohy and Media Studies</u>
+        <br>
+        class of May 2019
+      </p>
+      <p>
+        <strong>Oxford Academy</strong> Westbrook, CT
+        <br>
+        High School, 2012 - 2014
+      </p>
+      <h2>Expereince</h2>
+      <strong>Parsons School of Design</strong> New York, NY
+      <br>
+      <u>Peer Mentor</u> March 2016 - Currentley
+      <h2>Skills</h2>
+      <ul>
+        <li>Creative Coding (Processing, Open Frameworks, etc.) </li>
+        <li>Arduino, Raspberry Pi and Internet of Things </li>
+        <li>Web Development (CSS, JavaScript, jQuery, node.js)</li>
+        <li>Music and Sound Production (Logic Pro X) </li>
+        <li>3D Animation and modelling (Bender, Rhino) </li>
+        <li>Analog and Digital Photogrpahy (  Lightroom, Adobe Photoshop) </li>
+        <li>Video Editing (Adobe Premier Pro) </li>
+        <li>Operating an espresso machine</li>
+      </ul>
+      <h2>Interests and Influences</h2>
+      <ul>
+        <li>Sceptic, Pragmatic, Stoic, and Utilitarian Philosophy</li>
+        <li>Avant-Gard, Cubist, Constructivst, and Dada movements</li>
+        <li>Plato, Aristotle, Sextus </li>
+        <li>Space Exploration and Climate Change</li>
+        <li>History of Mankind</li>
+        <li>Photography</li>
+        <li>Typography</li>
+        <li>Machine Learning & Neural Networks</li>
+        <li>Cryptography</li>
+        <li>Yoga</li>
+      </ul>
+      <h2>Languages</h2>
+      Human
+      <ul>
+        <li>English (fluent)</li>
+        <li>Russian (fluent)</li>
+        <li>Italian (advanced)</li>
+      </ul>
+      Computer
+      <ul>
+        <li>C++</li>
+        <li>JavaScript, HTML, and CSS</li>
+        <li>Python</li>
+        <li>Swift</li>
+        <li>Turbo Pascal (1st)</li>
+        <li>R</li>
+      </ul>
+    </div>
+  </main>
+
+  <!-- CONTACT PAGE -->
+  <main id="contact">
+    <div class="crop-img">
+      <img src="img/aibox-tmb.jpg" alt="Artificial Intellegence Box" />
+    </div>
+
+    <div class="content">
+      <div class="img-caption">
+        Artificial Intellect Box (2015)
+      </div>
+      <h1>Contact</h1>
+      <p>You have become aquainted with my digital identity, now become aquainted with actual me... Contact me.</p>
+      <h3>Ways to Contact Me</h3>
+      <b>Email:</b> <a
+      href="mailto:mbrav@protonmail.com?body=Big%20brother%20is%20watching%20you%0D%0A-%20George%20Orwell">mbrav@protonmail.com</a>
+      <br>
+      <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
+      <br>
+      <b>Telegram:</b> <a href="https://telegram.me/mbrav">@mbrav </a>
+      <br>
+      <b>Twitter:</b> <a href="https://twitter.com/mixania">@mixania </a>
+      <br>
+      <h3>My other Digital Extensions</h3>
+      <b>GitHub:</b> @mbrav
+      <br>
+      <b>Flickr:</b> @mixania
+      <br>
+      <b>Vimeo:</b> @mbrav
+      <br>
+      <b>Soundcloud</b> @mixania
+      <br>
+      <b>Instagram:</b> @mbrav_
+    </div>
+  </main>
+  <footer>
+      2016 MB
+  </footer>
+</body>
+<script src="src/jquery-2.2.3.min.js" type="text/javascript"></script>
+<script src="src/script.js" type="text/javascript"></script>
 </html>
