--- a/index.html
+++ b/index.html
@@ -72,15 +72,13 @@
     <div class="content">
       <p>Hi, I’m Michael. </p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>physical computing</em>, <em>installation art</em>, and <em>concept design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>installation art</em>, and <em>ethical design</em>. </p>
 
-      <p>My experiences range from creative web design, to physical computing projects built with the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, and video editing. </p>
+      <p>My experiences range from creative/experimental web design, to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, photography and video editing. </p>
 
-      <p>In parallel with studying Design &amp; Technology at Parsons, I am also taking a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing natural environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
+      <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
-      <p><strong>NOTE</strong> At the time of this writing, this website remains unfinished while it is being updated on a weekly basis. Come back soon to take a look at the bigger picture. 😇</p>
-
-      <p>June, 2016 </p>
+      <p>My area of focus is experimental for the most part. I’m actively pursuing oppurtunities that would allow me to extend my specialization. I will be happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology its enviornments.</p>
     </div>
   </main>
 
@@ -108,7 +106,7 @@
   <!-- RESUME PAGE  -->
   <main id="resume">
     <div class="content">
-      <h1>Résumé</h1>
+      <h1>Resumé</h1>
       <h3>Creative Technology, Physical Computing, and Installation Art</h3>
 
       <h2>Education</h2>
@@ -117,14 +115,14 @@
         <br>
         BFA in <u>Design and Technology</u>
         <br>
-        class of May 2018
+        Class of May 2018
       </p>
       <p>
         <strong>New School Eugene Lang</strong> New York, NY
         <br>
         BFA in <u>Philospohy and Media Studies</u>
         <br>
-        class of May 2019
+        Class of May 2019
       </p>
       <p>
         <strong>Oxford Academy</strong> Westbrook, CT
