--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li class="page-link" id="about-link"><a href="#about">About</a></li>
       <li class="page-link" id="projects-link"><a href="#projects">Projects </a><span id="return-to-projecs"></span></li>
       <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
-      <li class="page-link" id="resume-link"><a href="#resume">Résumé</a></li>
+      <li class="page-link" id="resume-link"><a href="#resume">Resumé</a></li>
       <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
       <li class="page-link" id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
     </ul>
@@ -74,7 +74,7 @@
 
       <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative coding</em>, <em>installation art</em>, and <em>ethical design</em>. </p>
 
-      <p>My experiences range from creative/experimental web design, to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, photography and video editing. </p>
+      <p>My experiences range from creative/experimental web design (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect design, 3d animation, photography and video editing. </p>
 
       <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
 
